<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/regist_bg_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".login.LoginActivity">

        <include
            android:id="@+id/included"
            layout="@layout/include_toolbar" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_username_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="128dp"
            android:hint="@string/input_register_username"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:textSize="12sp"
            app:hintTextAppearance="@style/inputStyle"
            app:hintTextColor="@color/user_color_login_bg"
            app:layout_constraintTop_toBottomOf="@+id/included"
            tools:ignore="MissingConstraints,RtlHardcoded">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_username"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/shape_input"
                android:drawableStart="@drawable/ic_user_login_username"
                android:inputType="text"
                android:maxLines="1"
                android:padding="@dimen/dp_10"
                android:textColor="@color/user_color_login_bg"
                android:textSize="@dimen/sp_14" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_password"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:textSize="12sp"
            android:layout_marginTop="24dp"
            app:hintTextAppearance="@style/inputStyle"
            app:hintTextColor="@color/user_color_login_bg"
            app:layout_constraintTop_toBottomOf="@+id/edit_username_layout"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/shape_input"
                android:drawableStart="@drawable/ic_user_login_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="@dimen/dp_10"
                android:textColor="@color/user_color_login_bg"
                android:textColorHint="@color/user_color_login_bg"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_confirm_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/input_confirm_password"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:textSize="12sp"
            app:hintTextAppearance="@style/inputStyle"
            app:hintTextColor="@color/user_color_login_bg"
            app:layout_constraintTop_toBottomOf="@+id/edit_password_layout"
            app:passwordToggleEnabled="true"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/shape_input"
                android:drawableStart="@drawable/ic_user_login_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="@dimen/dp_10"
                android:textColor="@color/user_color_login_bg"
                android:textColorHint="@color/user_color_login_bg"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_regist"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/shape_button_bg"
            android:text="@string/regist"
            android:textColor="@color/common_color_white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_confirm_password_layout" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/btn_regist">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_already_exists"
                android:textColor="@color/user_color_login_bg" />

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@color/common_color_blue"
                android:textSize="@dimen/sp_14"
                android:textStyle="bold" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
