<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.guet.user.bill.bean.BillCustomViewModel" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/common_color_white"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/item_todo_tag"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/user_bill_tag_blue"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/user_bill_charge_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:lines="1"
                android:maxLength="16"
                android:text="@{viewModel.chargeName}"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/item_todo_tag"
                app:layout_constraintStart_toEndOf="@+id/item_todo_tag"
                app:layout_constraintTop_toTopOf="@+id/item_todo_tag"
                tools:text="今天晚上一起来开黑啊" />


            <TextView
                android:id="@+id/user_bill_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="8dp"
                android:text="@string/user_bill_status_paid"
                android:textColor="@color/light_sea_green"
                android:textSize="@dimen/sp_14"
                app:layout_constraintBaseline_toBaselineOf="@+id/user_bill_charge_name"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/user_bill_money"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:lineSpacingMultiplier="1.2"
                android:text="@{viewModel.chargeStandard}"
                android:textColor="@color/common_color_red"
                android:textSize="@dimen/sp_14"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/user_bill_status"
                app:layout_constraintStart_toStartOf="@+id/user_bill_charge_name"
                app:layout_constraintTop_toBottomOf="@+id/user_bill_line"
                tools:text="来一起打王者啊？" />

            <Button
                android:id="@+id/user_bill_pay"
                android:layout_width="72dp"
                android:layout_height="24dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/shape_light_sea_green_button_bg"
                android:text="@string/user_bill_pay"
                android:textColor="@color/common_color_white"
                android:textSize="12sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/btn_bill_details"
                app:layout_constraintEnd_toEndOf="parent" />

            <Button
                android:id="@+id/btn_bill_details"
                android:layout_width="72dp"
                android:layout_height="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/shape_blue_button_bg"
                android:text="@string/user_bill_change_details"
                android:textColor="@color/common_color_white"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/user_bill_pay"
                app:layout_constraintTop_toBottomOf="@+id/user_bill_money" />

            <TextView
                android:id="@+id/user_bill_line"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@color/windowBackground"
                app:layout_constraintEnd_toEndOf="@+id/user_bill_status"
                app:layout_constraintStart_toStartOf="@+id/item_todo_tag"
                app:layout_constraintTop_toBottomOf="@+id/user_bill_charge_name" />

            <TextView
                android:id="@+id/user_bill_create"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@{viewModel.gmtCreate}"
                android:textSize="12sp"
                app:layout_constraintEnd_toStartOf="@+id/btn_bill_details"
                app:layout_constraintStart_toStartOf="@+id/user_bill_money"
                app:layout_constraintTop_toBottomOf="@+id/user_bill_money" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>